fix: remove content from pengumuman
